deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: genai-ops
  namespace: genai-ops
  labels:
    app: genai-ops
  annotations:
    haproxy.router.openshift.io/timeout: 60s
spec:
  to:
    kind: Service
    name: genai-ops-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
